prevent text from being clipped
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/gus4@74531 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/client.css
+++ b/Site/webapp/wdkCustomization/css/client.css
@@ -464,7 +464,8 @@ h4 {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  height: 1em;
+  height: 1.4em;
+  line-height: 1.8em;
 }
 
 .eupathdb-MercatorTable {
